# variability-management-research

./: BasicTypes.hs  ConfigurationKnowledgeSampleEShop.hs  FeatureCarSample.hs  FeatureModelChecking.hs  MessageEnvironment.hs  ProjectHome.md  TODO.txt  UseCaseModelTests.hs  UseCaseSample.hs  UseCaseSampleEShop.hs  Weaver.hs  apendix.tex  evaluation.tex  introduction.tex  modeling-framework.tex  motivating-example.tex  rbonifacio.bbl  rbonifacio.ps  rbonifacio.ptb  related.tex  tasks.txt  variability-as-crosscutting.tex
VariabilityManagement/HaskellLibraries/component-model/: component-model.cabal
VariabilityManagement/HaskellLibraries/component-model/src/: Makefile
VariabilityManagement/HaskellLibraries/component-model/src/ComponentModel/Parsers/: AbsComponentModel.hs  ErrM.hs  LexComponentModel.hs  ParComponentModel.hs  ParserComponentModel.hs  PrintComponentModel.hs  (+1 more)
VariabilityManagement/HaskellLibraries/feature-modeling/: TODO  feature-modeling.cabal
VariabilityManagement/HaskellLibraries/feature-modeling/benchmarks/: bench100.res
VariabilityManagement/HaskellLibraries/feature-modeling/src/: FMIde.cf
VariabilityManagement/HaskellLibraries/feature-modeling/src/FeatureModel/: FCTypeChecker.lhs  FMTypeChecker.lhs  FeatureModel.lhs  Main.lhs  Types.lhs
VariabilityManagement/HaskellLibraries/feature-modeling/testsuite/tests/: EShopFeatureModel.lhs  FeatureModelDummy.lhs  FeatureModelTests.lhs
trunk/VariabilityManagement/HaskellLibraries/req-model/: requirementmodel.cabal
uc-model/: uc-model.cabal
uc-model/samples/eShop/: TargetUseCaseDocument.doc  UseCaseDocument.xml  UseCaseDocument.xml.bck
uc-model/src/UseCaseModel/: Types.lhs
uc-model/src/UseCaseModel/Parsers/XML/: XmlUseCaseModel.lhs  XmlUseCaseParser.hs
uc-model/testsuite/tests/: EShopUseCaseModel.lhs
(+1174 files in other folders)
