name:                uc-model
version:             0.0
synopsis:            <Project description>
description:         <Project description>
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Rodrigo Bonifacio
maintainer:          rba2@cin.ufpe.br
build-Depends:       base
ghc-options:         